--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 </head>
 <body>
 
-  <h1>Visualización de Datos – AG1</h1>
+  <h1>Visualización de Datos – AG2-Actividad Guiada 1</h1>
   <p><strong>Nombre:</strong> Wilmer Andres Ruiz Camacho</p>
-  <p><strong>Proyecto:</strong> https://stackblitz.com/edit/stackblitz-starters-enjw8cgn?file=index.html</p>
+  <p><strong>Proyecto:</strong> <a href="https://stackblitz.com/~/github.com/elmaxterandrius/AG2-Actividad-Guiada-1" target="_blank">StackBlitz</a></p>
+  <p><strong>Repositorio:</strong> <a href="https://github.com/elmaxterandrius/AG2-Actividad-Guiada-1" target="_blank">GitHub</a></p>
+
 
   <h2>1. Gráfico Circular – % Totales CO₂ por Top 10 Países</h2>
   <iframe width="874" height="407" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS8RO0OccL-U7iCXAqaTJ_XJqoCMxexGL28n7Jk62lEK2yuWbsX_9Y3bjoHxHvyhc4B0aBAqX2Pzr9O/pubchart?oid=189440134&amp;format=interactive"></iframe>
