--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     iframe { border: 1px solid #ccc; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);}
     h1 { color: #2c3e50; }
     h2 { margin-top: 40px; color: #34495e; }
-    p { max-width: 800px; line-height: 1.6; }
+    p { max-width: 700px; line-height: 1.6; }
   </style>
 </head>
 <body>
@@ -21,7 +21,7 @@
 
 
   <h2>1. Gráfico Circular – % Totales CO₂ por Top 10 Países</h2>
-  <iframe width="874" height="407" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS8RO0OccL-U7iCXAqaTJ_XJqoCMxexGL28n7Jk62lEK2yuWbsX_9Y3bjoHxHvyhc4B0aBAqX2Pzr9O/pubchart?oid=189440134&amp;format=interactive"></iframe>
+  <iframe width="720" height="407" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS8RO0OccL-U7iCXAqaTJ_XJqoCMxexGL28n7Jk62lEK2yuWbsX_9Y3bjoHxHvyhc4B0aBAqX2Pzr9O/pubchart?oid=189440134&amp;format=interactive"></iframe>  
   <p style="font-size: 0.9em; font-style: italic;">
     Fuente: <a href="https://datosmacro.expansion.com/energia-y-medio-ambiente/emisiones-co2" target="_blank">
     datosmacro.expansion.com
@@ -30,8 +30,7 @@
   <p>El gráfico muestra cómo las emisiones de CO₂ están concentradas en pocos países. China lidera con el 48,8%, seguido por Estados Unidos con el 17,2%, e India con el 10,9%. Estos tres países representan más del 75% de las emisiones totales entre los 10 principales emisores. Esta distribución desigual evidencia que cualquier acción efectiva contra el cambio climático debe estar liderada principalmente por estas naciones.</p>
 
   <h2>2. Gráfico de Barras – CO₂ per cápita</h2>
-  <iframe width="874" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS8RO0OccL-U7iCXAqaTJ_XJqoCMxexGL28n7Jk62lEK2yuWbsX_9Y3bjoHxHvyhc4B0aBAqX2Pzr9O/pubchart?oid=1255825622&amp;format=interactive"></iframe>
-  <p style="font-size: 0.9em; font-style: italic;">
+  <iframe width="720" height="458" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS8RO0OccL-U7iCXAqaTJ_XJqoCMxexGL28n7Jk62lEK2yuWbsX_9Y3bjoHxHvyhc4B0aBAqX2Pzr9O/pubchart?oid=2069689202&amp;format=interactive"></iframe>  <p style="font-size: 0.9em; font-style: italic;">
     Fuente: <a href="https://datosmacro.expansion.com/energia-y-medio-ambiente/emisiones-co2" target="_blank">
     datosmacro.expansion.com
     </a>
@@ -39,12 +38,12 @@
   <p>El gráfico muestra los 10 países con mayor emisión de CO₂ per cápita, lo que refleja la huella individual de cada habitante en estos territorios. Palau lidera con 62,6 toneladas por persona, seguido de Catar con 43,5. Estos niveles indican economías intensivas en energía o con baja población y alta dependencia de combustibles fósiles. Este tipo de análisis destaca la necesidad de políticas focalizadas más allá del tamaño del país.</p>
 
   <h2>3. Gráfico Combinado – Totales vs Per cápita</h2>
-  <iframe width="867" height="458" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS8RO0OccL-U7iCXAqaTJ_XJqoCMxexGL28n7Jk62lEK2yuWbsX_9Y3bjoHxHvyhc4B0aBAqX2Pzr9O/pubchart?oid=2069689202&amp;format=interactive"></iframe>
-  <p style="font-size: 0.9em; font-style: italic;">
-    Fuente: <a href="https://datosmacro.expansion.com/energia-y-medio-ambiente/emisiones-co2" target="_blank">
-    datosmacro.expansion.com
-    </a>
-  </p>
+  <iframe width="720" height="458" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS8RO0OccL-U7iCXAqaTJ_XJqoCMxexGL28n7Jk62lEK2yuWbsX_9Y3bjoHxHvyhc4B0aBAqX2Pzr9O/pubchart?oid=2069689202&amp;format=interactive"></iframe>
+    <p style="font-size: 0.9em; font-style: italic;">
+      Fuente: <a href="https://datosmacro.expansion.com/energia-y-medio-ambiente/emisiones-co2" target="_blank">
+      datosmacro.expansion.com
+      </a>
+    </p>
   <p>El gráfico permite comparar cómo algunos países con grandes emisiones totales de CO₂ no necesariamente presentan altas emisiones por habitante. Por ejemplo, China lidera las emisiones totales con más de 13.000 Mt, pero su valor per cápita es relativamente moderado (9,24 t). En cambio, países como Arabia Saudita, Canadá o Estados Unidos presentan valores per cápita significativamente mayores. Esta dualidad destaca la importancia de considerar tanto el volumen total como la intensidad individual de la contaminación en las decisiones de política ambiental global</p>
 
 </body>
