--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   </p>
   <p>El gráfico muestra cómo las emisiones de CO₂ están concentradas en pocos países. China lidera con el 48,8%, seguido por Estados Unidos con el 17,2%, e India con el 10,9%. Estos tres países representan más del 75% de las emisiones totales entre los 10 principales emisores. Esta distribución desigual evidencia que cualquier acción efectiva contra el cambio climático debe estar liderada principalmente por estas naciones.</p>
 
+
+  <!-- Salto de página -->
+  <div style="page-break-before: always;"></div>
   <h2>2. Gráfico de Barras – CO₂ per cápita</h2>
   <iframe width="720" height="458" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS8RO0OccL-U7iCXAqaTJ_XJqoCMxexGL28n7Jk62lEK2yuWbsX_9Y3bjoHxHvyhc4B0aBAqX2Pzr9O/pubchart?oid=2069689202&amp;format=interactive"></iframe>  <p style="font-size: 0.9em; font-style: italic;">
     Fuente: <a href="https://datosmacro.expansion.com/energia-y-medio-ambiente/emisiones-co2" target="_blank">
@@ -37,6 +40,9 @@
   </p>
   <p>El gráfico muestra los 10 países con mayor emisión de CO₂ per cápita, lo que refleja la huella individual de cada habitante en estos territorios. Palau lidera con 62,6 toneladas por persona, seguido de Catar con 43,5. Estos niveles indican economías intensivas en energía o con baja población y alta dependencia de combustibles fósiles. Este tipo de análisis destaca la necesidad de políticas focalizadas más allá del tamaño del país.</p>
 
+
+  <!-- Salto de página -->
+  <div style="page-break-before: always;"></div>
   <h2>3. Gráfico Combinado – Totales vs Per cápita</h2>
   <iframe width="720" height="458" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS8RO0OccL-U7iCXAqaTJ_XJqoCMxexGL28n7Jk62lEK2yuWbsX_9Y3bjoHxHvyhc4B0aBAqX2Pzr9O/pubchart?oid=2069689202&amp;format=interactive"></iframe>
     <p style="font-size: 0.9em; font-style: italic;">
