--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Visualización de Datos</title>
+  <!-- Definimos estilos generales de la pagina -->
   <style>
     body { font-family: Arial, sans-serif; margin: 40px; background: #f9f9f9; }
     iframe { border: 1px solid #ccc; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);}
